# open_vision_capsules

./: .gitattributes  .gitignore  COPYING  README.md  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml  pre_release_suffix.py  python-package.yml  test.yml
docs/: backends.md  backends.rst  capsule_class.md  capsule_class.rst  conf.py  creating_a_capsule.md  creating_a_capsule.rst  file_structure.md  file_structure.rst  index.md  index.rst  inputs_and_outputs.md  inputs_and_outputs.rst  introduction.rst  options.md  options.rst  runtime_environment.md  runtime_environment.rst  stream_state.md  stream_state.rst
docs/creating_capsules/: freezing_tensorflow_model.rst  index.rst  openvino_object_detector.rst  packaging_a_capsule.rst
tests/: conftest.py  dependencies.py  test_batch_executor.py  test_loading.py  test_node_definition.py  test_ovens.py  test_packaged_capsules.py
tools/: Dockerfile.build-env  Dockerfile.ubuntu  README.md  build_tools.sh  bulk_testing.sh  compile.py  options.json  pyproject.toml  test_phoning.sh
tools/bulk_accuracy/: bulk_classifier_accuracy_main.py  bulk_test_main.py  capsule_accuracy_common.py  capsule_accuracy_event_loop.py  capsule_mgmt_basic.py  capsule_mgmt_local.py  capsule_mgmt_remote.py
tools/capsule_benchmark/: README.md  args.py  benchmarking.py  main.py  output.py  requirements.txt  workers.py
tools/capsule_benchmark_accuracy/: README.md  classifier_capsule_accuracy.py
tools/capsule_classifier_accuracy/: README.md  capsule_classifier_accuracy.py  classifier_accuracy.py  detect_videos.py
tools/capsule_infer/: README.md  capsule_infer.py
tools/openvisioncapsule_tools/: cli.py  command_utils.py  print_module_info.py  print_utils.py
tools/openvisioncapsule_tools/bulk_accuracy/: capsule_accuracy_common.py  capsule_accuracy_report.py  capsule_mgmt_local.py  capsule_mgmt_remote.py
tools/openvisioncapsule_tools/capsule_benchmark/: capsules.py  main.py  requirements.txt
tools/openvisioncapsule_tools/capsule_classifier_accuracy/: capsule_classifier_accuracy.py
tools/openvisioncapsule_tools/capsule_infer/: __init__.py  capsule_infer.py  capsule_inference.py
tools/openvisioncapsule_tools/capsule_packaging/: __init__.py  capsule_packaging.py
tools/openvisioncapsule_tools/translations/: portal.en.yml
vcap/: pyproject.toml  setup.py
vcap/vcap/: __init__.py  backend.py  batch_executor.py  caching.py  capsule.py  deprecation.py  detection_node.py  device_mapping.py  modifiers.py  options.py  (+4 more)
vcap_utils/: pyproject.toml  setup.py
vcap_utils/vcap_utils/: __init__.py  version.py
vcap_utils/vcap_utils/algorithms/: __init__.py  distances.py  iou_cost_matrix.py  linear_assignment.py  nonmax_suppression.py
vcap_utils/vcap_utils/backends/: __init__.py  backend_process.py  backend_rpc_process.py  base_encoder.py  base_openvino.py  base_tensorflow.py  base_tensorrt.py  crowd_density.py  depth.py  load_utils.py  multiprocess_backend.py  openface_encoder.py  predictions.py  segmentation.py  tf_image_classification.py  tf_object_detection.py
(+27 files in other folders)
