[tool.poetry]
name = "openvisioncapsule-tools"
version = "0.3.7"
description = "A tool to help users to package, test OpenVisionCapsules"
authors = ["Stephen Li <stephen@aotu.ai>"]
license = "BSD license"

[tool.poetry.dependencies]
python = ">=3.6.6.2,<4.0"

[tool.poetry.scripts]
openvisioncapsule-tools = 'openvisioncapsule_tools.cli:cli_main'

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
