[tool.poetry]
name = "vcap-utils"
version = "0.2.4"
description = "Utilities for creating OpenVisionCapsules easily in Python"
authors = ["Aotu"]
license = "BSD-3-Clause"
homepage = "https://github.com/opencv/open_vision_capsules"
documentation = "https://openvisioncapsules.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
vcap = "0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
